# Zam-Secure-Pass

./: dev-requirements.txt  pyproject.toml  readme.md
secure_pass/: __main__.py  __main__.spec
secure_pass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
